added campaigns and session

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "craco-less": "^1.17.1",
     "dayjs": "^1.9.7",
     "fabric": "^4.2.0",
+    "fabric-customise-controls": "^2.0.6-beta",
     "firebase": "^8.2.0",
     "graphql": "^15.4.0",
     "history": "^4.10.1",
@@ -29,7 +30,9 @@
     "pica": "^6.1.1",
     "qs": "^6.9.4",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-paystack": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
